--- a/home.html
+++ b/home.html
@@ -81,7 +81,7 @@
 
 <div class="features">
     <div class="feature-item">
-        <a href="poems.html"><i class="fas fa-book feature-icon"></i><br>Poems</a>
+        <a href="https://childrens.poetryarchive.org/"><i class="fas fa-book feature-icon"></i><br>Poems</a>
     </div>
     <div class="feature-item">
         <a href="daily_news.html"><i class="fas fa-newspaper feature-icon"></i><br>Daily News</a>
@@ -93,7 +93,7 @@
         <a href="E-learning.html"><i class="fas fa-language feature-icon"></i><br>E-Learning</a>
     </div>
     <div class="feature-item">
-        <a href="games.html"><i class="fas fa-gamepad feature-icon"></i><br>Games</a>
+        <a href="https://www.education.com/games/"><i class="fas fa-gamepad feature-icon"></i><br>Games</a>
     </div>
 </div>
 <footer>
