--- a/home.html
+++ b/home.html
@@ -95,6 +95,10 @@
     <div class="feature-item">
         <a href="https://www.education.com/games/"><i class="fas fa-gamepad feature-icon"></i><br>Games</a>
     </div>
+    <div class="feature-item">
+        <a href="https://www.freechildrenstories.com/"><i class="fas fa-scroll feature-icon"></i>
+<br>Stories</a>
+    </div>
 </div>
 <footer>
     <h2><a href="feedback.html" style="text-decoration: none; color: white">Feedback</a></h2>
