--- a/welcome.html
+++ b/welcome.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
-    <link rel="stylesheet" href="styles1.css">
+    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
     <style>
-        /* Inline CSS for full-screen clickable area */
         body {
             margin: 0;
             padding: 0;
@@ -14,46 +13,137 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #f0f8ff;
-            cursor: pointer; /* Change cursor to pointer for clickable area */
+            background: linear-gradient(135deg, #ff99cc, #66ccff, #ffcc66);
+            background-size: 400% 400%;
+            animation: gradientAnimation 5s ease infinite;
+            cursor: pointer;
+            font-family: 'Patrick Hand', cursive;
         }
+
+        @keyframes gradientAnimation {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
         .welcome-container {
             text-align: center;
             background-color: #fff;
             padding: 50px;
             border-radius: 15px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            position: relative;
         }
+
         h1 {
             font-size: 2.5rem;
             color: #ff6347;
+            animation: bounce 2s infinite;
         }
+
+        @keyframes bounce {
+            0%, 20%, 50%, 80%, 100% {
+                transform: translateY(0);
+            }
+            40% {
+                transform: translateY(-10px);
+            }
+            60% {
+                transform: translateY(-5px);
+            }
+        }
+
         .thought {
             margin-top: 20px;
             font-size: 1.5rem;
             color: #4caf50;
             font-style: italic;
         }
+
         #welcome-char {
-            width: 200px; /* Adjust size of character */
-            margin-top: 20px;
+            width: 200px;
+            position: absolute;
+            top: -100px;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 1;
+        }
+
+        button {
+            padding: 15px 25px;
+            font-size: 1.5rem;
+            color: #fff;
+            background-color: #ff6347;
+            border: none;
+            border-radius: 12px;
+            cursor: pointer;
+            transition: transform 0.3s ease, background-color 0.3s ease;
+        }
+
+        button:hover {
+            transform: scale(1.1);
+            background-color: #ff4500;
+        }
+
+        #speech-bubble {
+            position: absolute;
+            top: 100px;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: #fff;
+            padding: 10px;
+            border-radius: 15px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            animation: bubblePop 1s ease-out;
+        }
+
+        @keyframes bubblePop {
+            0% {
+                transform: translateX(-50%) scale(0.5);
+                opacity: 0;
+            }
+            100% {
+                transform: translateX(-50%) scale(1);
+                opacity: 1;
+            }
+        }
+
+        .hidden {
+            display: none;
         }
     </style>
 </head>
 <body onclick="goToHomePage()">
-<div class="welcome-container">
-    <h1>Welcome to Alpha Kids!</h1>
-    <p class="thought">"Learning is a treasure that will follow its owner everywhere."</p>
-    <!-- Image of the character -->
-    <img id="welcome-char" src="welcome_char.png" alt="Welcome Character">
-</div>
+    <div class="welcome-container">
+        <h1>Welcome to Alpha Kids!</h1>
+        <p class="thought">"Learning is a treasure that will follow its owner everywhere."</p>
+        <img id="welcome-char" src="welcome_char.png" alt="Welcome Character">
+        <button>Start the Adventure!</button>
+    </div>
 
-<script>
-    function goToHomePage() {
-        window.location.href = 'home.html'; // Redirect to home page
-    }
-</script>
+    <div id="speech-bubble" class="hidden">
+        <p>Welcome, Little Learner!</p>
+    </div>
+
+    <audio id="welcome-sound" src="welcome-sound.mp3"></audio>
+
+    <script>
+        function goToHomePage() {
+            playSound();
+            window.location.href = 'home.html';
+        }
+
+        function playSound() {
+            var audio = document.getElementById('welcome-sound');
+            audio.play();
+        }
+
+        window.onload = () => {
+            document.getElementById('speech-bubble').classList.remove('hidden');
+        };
+    </script>
 </body>
 </html>
+
 
 
