--- a/welcome.html
+++ b/welcome.html
@@ -13,10 +13,9 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background: linear-gradient(135deg, #ff99cc, #66ccff, #ffcc66);
+            background: linear-gradient(135deg, #ffc1e3, #b3e5fc, #ffe0b2);
             background-size: 400% 400%;
             animation: gradientAnimation 5s ease infinite;
-            cursor: pointer;
             font-family: 'Patrick Hand', cursive;
         }
 
@@ -31,47 +30,35 @@
             background-color: #fff;
             padding: 50px;
             border-radius: 15px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
+            width: 90%;
+            max-width: 500px;
             position: relative;
         }
 
         h1 {
-            font-size: 2.5rem;
+            font-size: 2rem;
             color: #ff6347;
-            animation: bounce 2s infinite;
-        }
-
-        @keyframes bounce {
-            0%, 20%, 50%, 80%, 100% {
-                transform: translateY(0);
-            }
-            40% {
-                transform: translateY(-10px);
-            }
-            60% {
-                transform: translateY(-5px);
-            }
+            margin-bottom: 15px;
         }
 
         .thought {
             margin-top: 20px;
-            font-size: 1.5rem;
+            font-size: 1.3rem;
             color: #4caf50;
             font-style: italic;
         }
 
         #welcome-char {
-            width: 200px;
-            position: absolute;
-            top: -100px;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            z-index: 1;
+            width: 150px;
+            margin: 0 auto 15px auto;
+            display: block;
         }
 
         button {
+            margin-top: 20px;
             padding: 15px 25px;
-            font-size: 1.5rem;
+            font-size: 1.3rem;
             color: #fff;
             background-color: #ff6347;
             border: none;
@@ -81,13 +68,13 @@
         }
 
         button:hover {
-            transform: scale(1.1);
+            transform: scale(1.05);
             background-color: #ff4500;
         }
 
         #speech-bubble {
             position: absolute;
-            top: 100px;
+            top: 10px;
             left: 50%;
             transform: translateX(-50%);
             background-color: #fff;
@@ -112,46 +99,42 @@
             display: none;
         }
 
-        /* Fade out animation for page transition */
-        .fade-out {
-            animation: fadeOutAnimation 1s forwards;
-        }
-
-        @keyframes fadeOutAnimation {
-            0% {
-                opacity: 1;
-            }
-            100% {
-                opacity: 0;
-            }
-        }
-
         @media (max-width: 600px) {
             h1 {
-                font-size: 1.8rem;
+                font-size: 1.5rem;
             }
             .thought {
-                font-size: 1.2rem;
+                font-size: 1rem;
             }
             #welcome-char {
-                width: 150px;
-                top: -80px;
+                width: 120px;
             }
             .welcome-container {
                 padding: 30px;
             }
             button {
-                font-size: 1.2rem;
+                font-size: 1.1rem;
                 padding: 10px 20px;
+            }
+        }
+
+        .fade-out {
+            animation: fadeOut 1s forwards;
+        }
+
+        @keyframes fadeOut {
+            to {
+                opacity: 0;
+                transform: scale(0.9);
             }
         }
     </style>
 </head>
-<body onclick="goToHomePage()">
+<body>
     <div class="welcome-container">
+        <img id="welcome-char" src="welcome_char.png" alt="A friendly character welcoming users to Alpha Kids">
         <h1>Welcome to Alpha Kids!</h1>
         <p class="thought">"Learning is a treasure that will follow its owner everywhere."</p>
-        <img id="welcome-char" src="welcome_char.png" alt="A friendly character welcoming users to the Alpha Kids platform">
         <button onclick="goToHomePage()">Start the Adventure!</button>
     </div>
 
@@ -181,6 +164,7 @@
     </script>
 </body>
 </html>
+
 
 
 
