--- a/home.html
+++ b/home.html
@@ -4,80 +4,116 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <link rel="stylesheet" href="styles1.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Font Awesome for icons -->
+    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
             margin: 0;
             padding: 0;
-            font-family: 'Arial', sans-serif;
-            background-color: #F1D3CE;
+            font-family: 'Patrick Hand', cursive;
+            background: linear-gradient(135deg, #ffccff, #ccffcc, #ffcc66, #66ccff);
+            background-size: 400% 400%;
+            animation: gradientAnimation 10s ease infinite;
             display: flex;
             justify-content: center;
             align-items: center;
             flex-direction: column;
             height: 100vh;
         }
+        @keyframes gradientAnimation {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
         h1 {
-            font-size: 2.5rem;
-            color: purple; /* Tomato color */
+            font-size: 3rem;
+            color: #ff6347;
+            animation: bounce 2s infinite;
+        }
+        @keyframes bounce {
+            0%, 20%, 50%, 80%, 100% {
+                transform: translateY(0);
+            }
+            40% {
+                transform: translateY(-10px);
+            }
+            60% {
+                transform: translateY(-5px);
+            }
         }
         p {
-            font-size: 1.2rem;
-            color: black; /* Teal color */
+            font-size: 1.5rem;
+            color: #4caf50;
         }
         .features {
             display: flex;
             justify-content: center;
             flex-wrap: wrap;
             margin-top: 20px;
-            gap: 20px; /* Space between items */
+            gap: 20px;
         }
         .feature-item {
-            background-color: #ffffff; /* White background for cards */
-            border-radius: 15px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            background-color: #ffffff;
+            border-radius: 25px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
             padding: 20px;
             text-align: center;
-            width: 150px; /* Fixed width for uniformity */
-            transition: transform 0.2s; /* Smooth hover effect */
+            width: 150px;
+            transition: transform 0.4s, box-shadow 0.4s, background-color 0.4s;
         }
         .feature-item:hover {
-            transform: scale(1.05); /* Scale up on hover */
+            transform: scale(1.1);
+            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
+            background-color: #ffefd5;
         }
         .feature-item a {
             text-decoration: none;
-            color: #00796b; /* Teal color */
-            font-size: 1.5rem; /* Increase font size */
+            color: #00796b;
+            font-size: 1.3rem;
+            font-weight: bold;
         }
         .feature-icon {
-            font-size: 3rem; /* Larger icon size */
-            color: #BF2EF0; /* Tomato color */
+            font-size: 4rem;
+            color: #FF6347;
+            transition: color 0.4s;
         }
-        /* Footer styles */
+        .feature-icon:hover {
+            color: #FF4500;
+        }
         footer {
             margin-top: auto;
-            background-color: #FF4500; /* Orange footer background */
+            background-color: #FF6347;
             padding: 20px;
             text-align: center;
             width: 100%;
         }
-
         footer h2 {
             color: white;
             font-size: 1.8rem;
         }
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 2.5rem;
+            }
+            p {
+                font-size: 1.2rem;
+            }
+            .feature-item {
+                width: 120px;
+                padding: 15px;
+            }
+            .feature-icon {
+                font-size: 3rem;
+            }
+        }
     </style>
 </head>
 <body>
-<br><br><br><br><br><br>
 
-<!-- Modified title with "Welcome" and "to Alpha Kids" on different lines -->
 <h1>Welcome</h1>
 <h1>to Alpha Kids!</h1>
 
 <p>Explore fun activities below:</p>
-<br><br>
 
 <div class="features">
     <div class="feature-item">
@@ -96,54 +132,53 @@
         <a href="https://www.education.com/games/"><i class="fas fa-gamepad feature-icon"></i><br>Games</a>
     </div>
     <div class="feature-item">
-        <a href="https://www.freechildrenstories.com/"><i class="fas fa-scroll feature-icon"></i>
-<br>Stories</a>
+        <a href="https://www.freechildrenstories.com/"><i class="fas fa-scroll feature-icon"></i><br>Stories</a>
     </div>
 </div>
+
 <footer>
-    <h2><a href="feedback.html" style="text-decoration: none; color: white">Feedback</a></h2>
+    <h2><a href="feedback.html" style="text-decoration: none; color: white;">Feedback</a></h2>
 </footer>
+
 <script>
     function checkTimer() {
         const startTime = localStorage.getItem('startTime');
         const timerDuration = localStorage.getItem('timerDuration');
-        const parentPassword = localStorage.getItem('parentPassword');
 
         if (startTime && timerDuration) {
-            const elapsedTime = Math.floor((Date.now() - startTime) / 1000); // Time in seconds
+            const elapsedTime = Math.floor((Date.now() - startTime) / 1000);
             const remainingTime = timerDuration - elapsedTime;
 
             if (remainingTime <= 0) {
                 lockApp();
             } else {
-                // Update title to show remaining time
-                const minutes = Math.floor(remainingTime / 60);
-                const seconds = remainingTime % 60;
-                document.title = Time remaining: ${minutes < 10 ? '0' + minutes : minutes}:${seconds < 10 ? '0' + seconds : seconds};
-                
-                // Start a timer to update the title every second
+                updateTitle(remainingTime);
                 setInterval(() => {
                     const updatedRemainingTime = timerDuration - Math.floor((Date.now() - startTime) / 1000);
                     if (updatedRemainingTime <= 0) {
                         lockApp();
                     } else {
-                        const minutes = Math.floor(updatedRemainingTime / 60);
-                        const seconds = updatedRemainingTime % 60;
-                        document.title = Time remaining: ${minutes < 10 ? '0' + minutes : minutes}:${seconds < 10 ? '0' + seconds : seconds};
+                        updateTitle(updatedRemainingTime);
                     }
                 }, 1000);
             }
         }
     }
 
-    function lockApp() {
-        document.body.innerHTML = '<h2>The app is locked due to time restrictions. Please contact your parent to unlock.</h2>';
-        localStorage.clear(); // Clear timer settings
+    function updateTitle(remainingTime) {
+        const minutes = Math.floor(remainingTime / 60);
+        const seconds = remainingTime % 60;
+        document.title = `Time remaining: ${minutes < 10 ? '0' + minutes : minutes}:${seconds < 10 ? '0' + seconds : seconds}`;
     }
 
-    // Check timer on page load
+    function lockApp() {
+        document.body.innerHTML = '<h2>The app is locked due to time restrictions. Please contact your parent to unlock.</h2>';
+        localStorage.clear();
+    }
+
     window.onload = checkTimer;
 </script>
 
 </body>
 </html>
+
