--- a/home.html
+++ b/home.html
@@ -20,16 +20,20 @@
             flex-direction: column;
             height: 100vh;
         }
+
         @keyframes gradientAnimation {
             0% { background-position: 0% 50%; }
             50% { background-position: 100% 50%; }
             100% { background-position: 0% 50%; }
         }
+
         h1 {
             font-size: 3rem;
             color: #ff6347;
             animation: bounce 2s infinite;
+            margin-top: 60px; /* Adjusted margin to move it down */
         }
+
         @keyframes bounce {
             0%, 20%, 50%, 80%, 100% {
                 transform: translateY(0);
@@ -41,17 +45,20 @@
                 transform: translateY(-5px);
             }
         }
+
         p {
             font-size: 1.5rem;
             color: #4caf50;
         }
+
         .features {
             display: flex;
             justify-content: center;
             flex-wrap: wrap;
-            margin-top: 20px;
+            margin-top: 10px; /* Adjusted margin to move it up */
             gap: 20px;
         }
+
         .feature-item {
             background-color: #ffffff;
             border-radius: 25px;
@@ -61,36 +68,43 @@
             width: 150px;
             transition: transform 0.4s, box-shadow 0.4s, background-color 0.4s;
         }
+
         .feature-item:hover {
             transform: scale(1.1);
             box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
             background-color: #ffefd5;
         }
+
         .feature-item a {
             text-decoration: none;
             color: #00796b;
             font-size: 1.3rem;
             font-weight: bold;
         }
+
         .feature-icon {
             font-size: 4rem;
             color: #FF6347;
             transition: color 0.4s;
         }
+
         .feature-icon:hover {
             color: #FF4500;
         }
+
         footer {
-            margin-top: auto;
+            margin-top: 20px; /* Adjusted margin to move it up */
             background-color: #FF6347;
-            padding: 20px;
+            padding: 15px;
             text-align: center;
             width: 100%;
         }
+
         footer h2 {
             color: white;
             font-size: 1.8rem;
         }
+
         @media (max-width: 600px) {
             h1 {
                 font-size: 2.5rem;
@@ -181,4 +195,5 @@
 
 </body>
 </html>
+
 
