--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
             font-size: 3rem;
             color: #ff6347;
             animation: bounce 2s infinite;
-            margin-top: 60px; /* Adjusted margin to move it down */
+            margin-top: 40px; /* Adjusted margin to reduce the gap */
         }
 
         @keyframes bounce {
