--- a/home.html
+++ b/home.html
@@ -4,98 +4,77 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Font Awesome for icons -->
     <style>
         body {
             margin: 0;
             padding: 0;
-            font-family: 'Patrick Hand', cursive;
-            background: linear-gradient(135deg, #ffccff, #ccffcc, #ffcc66, #66ccff);
-            background-size: 400% 400%;
-            animation: gradientAnimation 10s ease infinite;
+            font-family: 'Arial', sans-serif;
+            background-color: #F1D3CE;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
-            flex-direction: column;
             height: 100vh;
         }
 
-        @keyframes gradientAnimation {
-            0% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
-            100% { background-position: 0% 50%; }
-        }
-
         h1 {
-            font-size: 3rem;
-            color: #ff6347;
-            animation: bounce 2s infinite;
-            margin-top: 40px; /* Adjusted margin to reduce the gap */
+            font-size: 2.5rem;
+            color: purple; /* Purple color */
+            margin: 0;
+            padding-top: 20px; /* Added top padding for spacing */
         }
 
-        @keyframes bounce {
-            0%, 20%, 50%, 80%, 100% {
-                transform: translateY(0);
-            }
-            40% {
-                transform: translateY(-10px);
-            }
-            60% {
-                transform: translateY(-5px);
-            }
+        h2 {
+            font-size: 2rem;
+            color: purple; /* Same color for consistency */
+            margin: 10px 0; /* Margin for spacing */
         }
 
         p {
-            font-size: 1.5rem;
-            color: #4caf50;
+            font-size: 1.2rem;
+            color: black; /* Black color */
         }
 
         .features {
             display: flex;
             justify-content: center;
             flex-wrap: wrap;
-            margin-top: 10px; /* Adjusted margin to move it up */
-            gap: 20px;
+            margin-top: 20px;
+            gap: 20px; /* Space between items */
+            padding: 20px; /* Added padding for better layout */
         }
 
         .feature-item {
-            background-color: #ffffff;
-            border-radius: 25px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            background-color: #ffffff; /* White background for cards */
+            border-radius: 15px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             padding: 20px;
             text-align: center;
-            width: 150px;
-            transition: transform 0.4s, box-shadow 0.4s, background-color 0.4s;
+            width: 150px; /* Fixed width for uniformity */
+            transition: transform 0.2s; /* Smooth hover effect */
         }
 
         .feature-item:hover {
-            transform: scale(1.1);
-            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
-            background-color: #ffefd5;
+            transform: scale(1.05); /* Scale up on hover */
         }
 
         .feature-item a {
             text-decoration: none;
-            color: #00796b;
-            font-size: 1.3rem;
-            font-weight: bold;
+            color: #00796b; /* Teal color */
+            font-size: 1.5rem; /* Increase font size */
         }
 
         .feature-icon {
-            font-size: 4rem;
-            color: #FF6347;
-            transition: color 0.4s;
+            font-size: 3rem; /* Larger icon size */
+            color: #BF2EF0; /* Color for icons */
         }
 
-        .feature-icon:hover {
-            color: #FF4500;
-        }
-
+        /* Footer styles */
         footer {
-            margin-top: 20px; /* Adjusted margin to move it up */
-            background-color: #FF6347;
-            padding: 15px;
+            margin-top: auto;
+            background-color: #FF4500; /* Orange footer background */
+            padding: 20px;
             text-align: center;
             width: 100%;
         }
@@ -103,21 +82,21 @@
         footer h2 {
             color: white;
             font-size: 1.8rem;
+            margin: 0; /* Remove margin */
         }
 
+        /* Responsive adjustments */
         @media (max-width: 600px) {
             h1 {
-                font-size: 2.5rem;
+                font-size: 2rem; /* Smaller font size for mobile */
             }
-            p {
-                font-size: 1.2rem;
-            }
+
             .feature-item {
-                width: 120px;
-                padding: 15px;
+                width: 120px; /* Adjust width for smaller screens */
             }
+
             .feature-icon {
-                font-size: 3rem;
+                font-size: 2.5rem; /* Smaller icon size for mobile */
             }
         }
     </style>
@@ -125,7 +104,7 @@
 <body>
 
 <h1>Welcome</h1>
-<h1>to Alpha Kids!</h1>
+<h2>to Alpha Kids!</h2> <!-- Changed from h1 to h2 for better structure -->
 
 <p>Explore fun activities below:</p>
 
@@ -151,49 +130,53 @@
 </div>
 
 <footer>
-    <h2><a href="feedback.html" style="text-decoration: none; color: white;">Feedback</a></h2>
+    <h2><a href="feedback.html" style="text-decoration: none; color: white">Feedback</a></h2>
 </footer>
 
 <script>
     function checkTimer() {
         const startTime = localStorage.getItem('startTime');
         const timerDuration = localStorage.getItem('timerDuration');
+        const parentPassword = localStorage.getItem('parentPassword');
 
         if (startTime && timerDuration) {
-            const elapsedTime = Math.floor((Date.now() - startTime) / 1000);
+            const elapsedTime = Math.floor((Date.now() - startTime) / 1000); // Time in seconds
             const remainingTime = timerDuration - elapsedTime;
 
             if (remainingTime <= 0) {
                 lockApp();
             } else {
-                updateTitle(remainingTime);
+                // Update title to show remaining time
+                const minutes = Math.floor(remainingTime / 60);
+                const seconds = remainingTime % 60;
+                document.title = `Time remaining: ${minutes < 10 ? '0' + minutes : minutes}:${seconds < 10 ? '0' + seconds : seconds}`;
+
+                // Start a timer to update the title every second
                 setInterval(() => {
                     const updatedRemainingTime = timerDuration - Math.floor((Date.now() - startTime) / 1000);
                     if (updatedRemainingTime <= 0) {
                         lockApp();
                     } else {
-                        updateTitle(updatedRemainingTime);
+                        const minutes = Math.floor(updatedRemainingTime / 60);
+                        const seconds = updatedRemainingTime % 60;
+                        document.title = `Time remaining: ${minutes < 10 ? '0' + minutes : minutes}:${seconds < 10 ? '0' + seconds : seconds}`;
                     }
                 }, 1000);
             }
         }
     }
 
-    function updateTitle(remainingTime) {
-        const minutes = Math.floor(remainingTime / 60);
-        const seconds = remainingTime % 60;
-        document.title = `Time remaining: ${minutes < 10 ? '0' + minutes : minutes}:${seconds < 10 ? '0' + seconds : seconds}`;
-    }
-
     function lockApp() {
         document.body.innerHTML = '<h2>The app is locked due to time restrictions. Please contact your parent to unlock.</h2>';
-        localStorage.clear();
+        localStorage.clear(); // Clear timer settings
     }
 
+    // Check timer on page load
     window.onload = checkTimer;
 </script>
 
 </body>
 </html>
+
 
 
