--- a/home.html
+++ b/home.html
@@ -16,31 +16,32 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+            text-align: center; /* Center align text */
         }
 
         h1 {
             font-size: 2.5rem;
             color: purple; /* Purple color */
-            margin: 0;
-            padding-top: 20px; /* Added top padding for spacing */
+            margin: 10px 0; /* Reduced margin */
         }
 
         h2 {
             font-size: 2rem;
-            color: purple; /* Same color for consistency */
-            margin: 10px 0; /* Margin for spacing */
+            color: purple; /* Consistent color */
+            margin: 5px 0; /* Reduced margin */
         }
 
         p {
             font-size: 1.2rem;
             color: black; /* Black color */
+            margin: 10px 0; /* Margin for spacing */
         }
 
         .features {
             display: flex;
             justify-content: center;
             flex-wrap: wrap;
-            margin-top: 20px;
+            margin-top: 10px; /* Reduced margin for the features section */
             gap: 20px; /* Space between items */
             padding: 20px; /* Added padding for better layout */
         }
@@ -49,9 +50,9 @@
             background-color: #ffffff; /* White background for cards */
             border-radius: 15px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            padding: 20px;
+            padding: 15px; /* Adjusted padding */
             text-align: center;
-            width: 150px; /* Fixed width for uniformity */
+            width: 130px; /* Reduced width for uniformity */
             transition: transform 0.2s; /* Smooth hover effect */
         }
 
@@ -62,26 +63,25 @@
         .feature-item a {
             text-decoration: none;
             color: #00796b; /* Teal color */
-            font-size: 1.5rem; /* Increase font size */
+            font-size: 1.3rem; /* Adjusted font size */
         }
 
         .feature-icon {
-            font-size: 3rem; /* Larger icon size */
-            color: #BF2EF0; /* Color for icons */
+            font-size: 2.5rem; /* Reduced icon size */
+            color: #BF2EF0; /* Icon color */
         }
 
         /* Footer styles */
         footer {
             margin-top: auto;
             background-color: #FF4500; /* Orange footer background */
-            padding: 20px;
-            text-align: center;
+            padding: 10px; /* Reduced padding */
             width: 100%;
         }
 
         footer h2 {
             color: white;
-            font-size: 1.8rem;
+            font-size: 1.5rem; /* Reduced footer font size */
             margin: 0; /* Remove margin */
         }
 
@@ -91,12 +91,16 @@
                 font-size: 2rem; /* Smaller font size for mobile */
             }
 
+            h2 {
+                font-size: 1.5rem; /* Smaller font size for mobile */
+            }
+
             .feature-item {
-                width: 120px; /* Adjust width for smaller screens */
+                width: 100px; /* Adjust width for smaller screens */
             }
 
             .feature-icon {
-                font-size: 2.5rem; /* Smaller icon size for mobile */
+                font-size: 2rem; /* Smaller icon size for mobile */
             }
         }
     </style>
