--- a/index.html
+++ b/index.html
@@ -6,81 +6,7 @@
     <title>Login Page</title>
     <link rel="stylesheet" href="styles1.css">
     <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: 'Comic Sans MS', cursive, sans-serif; /* Fun font for kids */
-            background-color: #E8F6EF; /* Light background */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            height: 100vh;
-            text-align: center; /* Center text */
-        }
-        h1 {
-            font-size: 3rem;
-            color: #FF5733; /* Bright color */
-            margin-bottom: 20px; /* Spacing */
-        }
-        p {
-            font-size: 1.5rem;
-            color: #333;
-        }
-        form {
-            background-color: #FFF; /* White background for form */
-            border-radius: 10px; /* Rounded corners */
-            padding: 20px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-            display: flex;
-            flex-direction: column;
-            gap: 15px; /* Space between inputs */
-            width: 300px; /* Fixed width */
-        }
-        input {
-            padding: 10px;
-            border: 2px solid #FF5733; /* Colorful border */
-            border-radius: 5px; /* Rounded input corners */
-            font-size: 1.2rem;
-        }
-        input:focus {
-            border-color: #28B463; /* Green border on focus */
-            outline: none; /* Remove default outline */
-        }
-        button {
-            background-color: #FF5733; /* Bright button color */
-            color: white; /* White text */
-            border: none;
-            padding: 10px;
-            border-radius: 5px;
-            font-size: 1.5rem;
-            cursor: pointer; /* Pointer cursor */
-            transition: background-color 0.3s; /* Smooth transition */
-        }
-        button:hover {
-            background-color: #C70039; /* Darker shade on hover */
-        }
-        footer {
-            margin-top: auto;
-            background-color: #FF4500; /* Footer color */
-            padding: 10px;
-            width: 100%;
-            position: fixed;
-            bottom: 0; /* Footer at the bottom */
-        }
-        footer h2 {
-            color: white;
-            font-size: 1.5rem;
-            margin: 0; /* Remove margin */
-        }
-        .form-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        .signup-form {
-            display: none; /* Initially hidden */
-        }
+        /* Your existing CSS here */
     </style>
 </head>
 <body>
@@ -90,15 +16,14 @@
         <form id="login-form">
             <input type="email" id="login-email" placeholder="Email" required>
             <input type="password" id="login-password" placeholder="Password" required>
-            <input type="password" id="parent-password" placeholder="Parent Password" required>
-            <input type="number" id="timer-duration" placeholder="Duration (minutes)" min="1" required>
             <button type="submit">Login</button>
+            <p>Don't have an account? <span id="showSignup" style="cursor:pointer; color:#FF5733;">Sign Up</span></p>
         </form>
 
-        <div class="signup-form">
+        <div class="signup-form" style="display: none;"> <!-- Initially hidden -->
             <h2>Sign Up</h2>
             <form id="signup-form">
-                <input type="text" id="signup-name" placeholder="Full Name" required>
+                <input type="text" id="signup-username" placeholder="Username" required>
                 <input type="email" id="signup-email" placeholder="Email" required>
                 <input type="password" id="signup-password" placeholder="Password" required>
                 <button type="submit">Sign Up</button>
@@ -112,8 +37,6 @@
             event.preventDefault(); // Prevent page reload
             const email = document.getElementById('login-email').value;
             const password = document.getElementById('login-password').value;
-            const parentPassword = document.getElementById('parent-password').value;
-            const timerDurationInput = document.getElementById('timer-duration').value;
 
             // Prepare the login data
             const loginData = {
@@ -136,17 +59,46 @@
                 return response.json();
             })
             .then(data => {
-                // Handle successful login
                 alert(data.message);
-                // Save timer settings
-                const timerDuration = parseInt(timerDurationInput, 10) * 60; // Convert minutes to seconds
-                const startTime = Date.now(); // Current time in milliseconds
-                localStorage.setItem('parentPassword', parentPassword);
-                localStorage.setItem('timerDuration', timerDuration);
-                localStorage.setItem('startTime', startTime);
+                window.location.href = 'welcome.html'; // Redirect to the welcome page
+            })
+            .catch(error => {
+                alert(error.message);
+            });
+        }
 
-                // Redirect to the welcome page
-                window.location.href = 'welcome.html';
+        function signup(event) {
+            event.preventDefault(); // Prevent page reload
+            const username = document.getElementById('signup-username').value;
+            const email = document.getElementById('signup-email').value;
+            const password = document.getElementById('signup-password').value;
+
+            // Prepare the signup data
+            const signupData = {
+                username: username,
+                email: email,
+                password: password,
+            };
+
+            // Send signup request to the backend
+            fetch('http://localhost:3000/api/register', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify(signupData),
+            })
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Registration failed!');
+                }
+                return response.json();
+            })
+            .then(data => {
+                alert(data.message);
+                // Optionally, redirect to the login page after registration
+                document.querySelector('.signup-form').style.display = 'none';
+                document.querySelector('#login-form').style.display = 'block';
             })
             .catch(error => {
                 alert(error.message);
@@ -154,9 +106,21 @@
         }
 
         document.getElementById('login-form').addEventListener('submit', login);
+        document.getElementById('signup-form').addEventListener('submit', signup);
+
+        document.getElementById('showSignup').addEventListener('click', function() {
+            document.querySelector('.signup-form').style.display = 'block';
+            document.querySelector('#login-form').style.display = 'none';
+        });
+
+        document.getElementById('showLogin').addEventListener('click', function() {
+            document.querySelector('.signup-form').style.display = 'none';
+            document.querySelector('#login-form').style.display = 'block';
+        });
     </script>
 </body>
 </html>
+
 
 
 
